configured JVM for PDFBox